add setvolume controller

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,9 +1,11 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
     <h2>Welcome to Ionic</h2>
+    <input ng-model="uid" ng-change="updateUid(uid)" /><input ng-model="volume" ng-change="setVolume(volume)" /><input type="button" value="update playlist" ng-click="updatePlaylist(uid)">
+    {{uid}}
     <ul ng-repeat="story in storyList">
-      <li ng-click="play(story)"> 
-        Click vô để phát bài {{story.title}}
+      <li > 
+        <input type="checkbox" ng-model="story.checked"> <span ng-click="play(story)">Click vô để phát bài {{story.title}}</span>
       </li>
     </ul>
     {{storyList | json}}
